--- a/WpfApp1/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/WpfApp1/MainWindow.xaml
@@ -7,6 +7,16 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+            <WrapPanel Grid.Row="0" >
+            <Menu Height="20" Width="800">
+                <MenuItem Width="50" Height="20"  Header="Add" />
+            </Menu>
+        </WrapPanel>
+        <ListView Grid.Row="1" Name="ListView1">
+        </ListView>
     </Grid>
 </Window>
