--- a/WpfApp1/WpfApp1/Add_Book_Viev.xaml
+++ b/WpfApp1/WpfApp1/Add_Book_Viev.xaml
@@ -24,12 +24,12 @@
         <Label Grid.Row="2" Content="Genre" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Label Grid.Row="3" Content="Image" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Label Grid.Row="4" Content="File" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <TextBox Grid.Column="1" Grid.Row="0" Width="150" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <TextBox Grid.Column="1" Grid.Row="1" Width="150" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <ComboBox Grid.Column="1" Grid.Row="2" Width="150" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Button Grid.Column="1" Grid.Row="3" Content="Add Image" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Button Grid.Column="1" Grid.Row="4" Content="Add File" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Button Grid.Column="0" Grid.Row="5" Width="80" Content="Ok" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <TextBox Name="Name" Grid.Column="1" Grid.Row="0" Width="150" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <TextBox Name="Author" Grid.Column="1" Grid.Row="1" Width="150" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <ComboBox Name="Genre" Grid.Column="1" Grid.Row="2" Width="150" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Button Click="Add_Image_Click" Grid.Column="1" Grid.Row="3" Content="Add Image" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Button Click="Add_File_Click" Grid.Column="1" Grid.Row="4" Content="Add File" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Button Grid.Column="0" Grid.Row="5" Width="80" Content="Ok" HorizontalAlignment="Center" VerticalAlignment="Center" Click="Button_Click"/>
         <Button Grid.Column="1" Grid.Row="5" Width="100" Content="Exit" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </Grid>
 </Window>
