--- a/WpfApp1/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/WpfApp1/MainWindow.xaml
@@ -14,9 +14,10 @@
         
         <Menu Grid.ColumnSpan="1" Grid.Row="0">
         <MenuItem Width="50" Height="20"  Header="Add" Click="AddBook_Click"   />
+        <MenuItem Width="50" Height="20"  Header="Remove" Click="MenuItem_Click_2"   />
         </Menu>
 
-        <ListView ScrollViewer.HorizontalScrollBarVisibility="Disabled" Name="view" HorizontalContentAlignment="Center" Grid.Row="1" MouseDoubleClick="view_MouseDoubleClick">
+        <ListView ScrollViewer.HorizontalScrollBarVisibility="Disabled" Name="view" HorizontalContentAlignment="Center" Grid.Row="1" MouseDoubleClick="view_MouseDoubleClick" >
             <ListView.ItemsPanel >
                 <ItemsPanelTemplate>
                     <WrapPanel HorizontalAlignment="Center"></WrapPanel>
