--- a/WpfApp1/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/WpfApp1/MainWindow.xaml
@@ -11,26 +11,26 @@
             <RowDefinition Height="20"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        
+
         <Menu Grid.ColumnSpan="1" Grid.Row="0">
-        <MenuItem Width="50" Height="20"  Header="Add" Click="AddBook_Click"   />
-        <MenuItem Width="50" Height="20"  Header="Remove" Click="MenuItem_Click_2"   />
+            <MenuItem Style="{DynamicResource MenuItemStyle}" Header="Add" Click="AddBook_Click"/>
+            <MenuItem Style="{DynamicResource MenuItemStyle}" Header="Remove" Click="MenuItem_Click_2"/>
+            <MenuItem Style="{DynamicResource MenuItemStyle}" Header="Genre" Click="MenuItem_Click_2"/>
         </Menu>
 
-        <ListView ScrollViewer.HorizontalScrollBarVisibility="Disabled" Name="view" HorizontalContentAlignment="Center" Grid.Row="1" MouseDoubleClick="view_MouseDoubleClick" >
-            <ListView.ItemsPanel >
+        <ListView ScrollViewer.HorizontalScrollBarVisibility="Disabled" Name="view" HorizontalContentAlignment="Center" Grid.Row="1" MouseDoubleClick="view_MouseDoubleClick">
+            <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <WrapPanel HorizontalAlignment="Center"></WrapPanel>
+                    <WrapPanel HorizontalAlignment="Left"></WrapPanel>
                 </ItemsPanelTemplate>
             </ListView.ItemsPanel>
-            <ListView.ItemTemplate  >
-                <DataTemplate  >
-                    <StackPanel Margin="5" Background="Aqua" Height="350" Width="275"  >
-                        <Image HorizontalAlignment="Center" Source="{Binding Path=imgPuth}" Height="250" Width="250" />
-                        <TextBlock HorizontalAlignment="Center" FontSize="30"  Text="{ Binding Path=name}"/>
-                        <TextBlock HorizontalAlignment="Center" FontSize="25" Text="{Binding Path=author}"/>
-                        <TextBlock IsEnabled="False" HorizontalAlignment="Center" FontSize="25"  Text="{Binding Path=genre}"/>
-                       
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Style="{DynamicResource PanelStyle}">
+                        <Image Style="{DynamicResource ImageStyle}" Source="{Binding Path=imgPuth}"/>
+                        <TextBlock Style="{DynamicResource TextBlockStyle}" Text="{ Binding Path=name}"/>
+                        <TextBlock Style="{DynamicResource TextBlockStyle}" Text="{Binding Path=author}"/>
+                        <TextBlock Style="{DynamicResource TextBlockStyle}" IsEnabled="False" Text="{Binding Path=genre}"/>
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
