--- a/WpfApp1/WpfApp1/DictionaryClassic.xaml
+++ b/WpfApp1/WpfApp1/DictionaryClassic.xaml
@@ -56,8 +56,7 @@
 
     <Style  x:Key="MenuItemStyle" TargetType="MenuItem">
         <Setter Property="HorizontalAlignment" Value="Center"/>
-        <Setter Property="Height" Value="20"/>
-        <Setter Property="Width" Value="50"/>
+        <Setter Property="Background" Value="{StaticResource GreyBrush}"/>
     </Style>
 
     <Style  x:Key="LabelStyle" TargetType="Label">
