--- a/WpfApp1/WpfApp1/DictionaryModern.xaml
+++ b/WpfApp1/WpfApp1/DictionaryModern.xaml
@@ -1,12 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:WpfApp1">
-    <LinearGradientBrush x:Key="PolandBrush" StartPoint="0,0" EndPoint="0,1" >
+    <LinearGradientBrush x:Key="Red" StartPoint="0,0" EndPoint="0,1" >
         <GradientStop Color="Black" Offset="0.5"></GradientStop>
         <GradientStop Color="Red" Offset="1"></GradientStop>
     </LinearGradientBrush>
 
-    <LinearGradientBrush x:Key="RevPolandBrush" StartPoint="0,0" EndPoint="0,1" >
+    <LinearGradientBrush x:Key="RevRed" StartPoint="0,0" EndPoint="0,1" >
         <GradientStop Color="Aqua" Offset="0"></GradientStop>
         <GradientStop Color="LightBlue" Offset="1"></GradientStop>
     </LinearGradientBrush>
@@ -17,8 +17,8 @@
         <Setter Property="FontSize" Value="14"/>
         <!--<Setter Property="FontFamily" Value="Comic Sans MS"/>-->
         <Setter Property="Margin" Value="4,4,4,4"/>
-        <Setter Property="Background" Value="{StaticResource GreyBrush}"/>
-        <Setter Property="Foreground" Value="{StaticResource RevGreyBrush}"/>
+        <Setter Property="Background" Value="{StaticResource Red}"/>
+        <Setter Property="Foreground" Value="{StaticResource RevRed}"/>
         <!--<Setter Property="Height" Value="100"/>-->
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
@@ -27,7 +27,7 @@
     <Style x:Key="TextBlockStyle" TargetType="TextBlock">
         <Setter Property="FontSize" Value="30"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
-        <Setter Property="Foreground" Value="{StaticResource RevGreyBrush}"/>
+        <Setter Property="Foreground" Value="{StaticResource RevRed}"/>
         <Setter Property="TextWrapping" Value="Wrap"></Setter>
     </Style>
 
@@ -35,13 +35,13 @@
         <Setter Property="FontSize" Value="12"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="Foreground" Value="{StaticResource RevGreyBrush}"/>
+        <Setter Property="Foreground" Value="{StaticResource RevRed}"/>
         <Setter Property="TextWrapping" Value="Wrap"></Setter>
         <Setter Property="Width" Value="150"/>
     </Style>
 
     <Style  x:Key="PanelStyle" TargetType="StackPanel">
-        <Setter Property="Background" Value="{StaticResource GreyBrush}"/>
+        <Setter Property="Background" Value="{StaticResource Red}"/>
         <Setter Property="Margin" Value="3"/>
         <Setter Property="Height" Value="400"/>
         <Setter Property="Width" Value="275"/>
@@ -56,8 +56,7 @@
 
     <Style  x:Key="MenuItemStyle" TargetType="MenuItem">
         <Setter Property="HorizontalAlignment" Value="Center"/>
-        <Setter Property="Height" Value="20"/>
-        <Setter Property="Width" Value="50"/>
+        
     </Style>
 
     <Style  x:Key="LabelStyle" TargetType="Label">
@@ -72,16 +71,19 @@
         <Setter Property="FontSize" Value="12"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="Foreground" Value="{StaticResource RevGreyBrush}"/>
+        <Setter Property="Foreground" Value="{StaticResource RevRed}"/>
         <Setter Property="Width" Value="150"/>
     </Style>
 
     <DataTemplate x:Key="ListDataTemplate" >
         <StackPanel Style="{DynamicResource PanelStyle}">
-            <Image Style="{DynamicResource ImageStyle}" Source="{Binding Path=imgPuth}"/>
+           
             <TextBlock Style="{DynamicResource TextBlockStyle}" Text="{ Binding Path=name}"/>
             <TextBlock Style="{DynamicResource TextBlockStyle}" Text="{Binding Path=author}"/>
             <TextBlock Style="{DynamicResource TextBlockStyle}" IsEnabled="False" Text="{Binding Path=genre}"/>
+            <Image  Source="{Binding Path=imgPuth}"/>
+          
+
         </StackPanel>
     </DataTemplate>
 </ResourceDictionary>
